--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-theme="crimison">
+<body data-sveltekit-preload-data="hover" data-theme="crimison">
 	<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 </body>
 
